data/derived/comb/progs/unify/prog5209.ml.out
Characters 85-94:
  | l   -> sepConcat @ List.map(f, l);;
           ^^^^^^^^^
Error: This expression has type string -> string list -> string
       but an expression was expected of type 'a list
